<resources>
    <string name="app_name">Peças</string>

    <string name="showCodigo">Codigo</string>
    <string name="showCategoria">Categoria</string>
    <string name="showValorVenda">Valor</string>
    <string name="showStatus">Status</string>

    <string name="hint_nome">Nome</string>
    <string name="hint_codigo">Codigo</string>
    <string name="hint_categoria">Categoria</string>
    <string name="simbolo_moeda">R$</string>
    <string name="hint_lucro">Lucro</string>
    <string name="hint_custo">Custo</string>
    <string name="hint_status">Status</string>
    <string name="salvar_button">Salvar</string>

    <string name="order_title">Order</string>
    <string name="status_title">Status</string>
    <string name="settings_title">Settings</string>
    <string name="favorites_title">Favorites</string>
    <string name="remove_title">Remove</string>
    <string name="share_title">Share</string>
    <string name="editar">EDITAR</string>
    <string name="custo">Custo: 100</string>
    <string name="venda">Venda: 150</string>
    <string name="lucro">Lucro: 50%</string>
    <string name="data">Data:</string>
    <string name="custo_textView">Custo:</string>
    <string name="lucro_textView">Lucro:</string>
    <string name="preco_textView">Preço:</string>
    <string name="simbolo_porcentagem">%</string>
    <string name="showPeca">Peça</string>
</resources>