<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.466" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/precos_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="430dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="390dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dataPreco_textView"
                        android:layout_width="153dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="5"
                        android:gravity="center_vertical"
                        android:text="@string/data"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:ignore="NestedWeights" />

                    <EditText
                        android:id="@+id/editTextDate"
                        android:layout_width="195dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:ems="10" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/custo_textView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="5"
                        android:gravity="center_vertical"
                        android:text="@string/custo_textView"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                    <EditText
                        android:id="@+id/custo_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:ems="10" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="390dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lucro_textView"
                        android:layout_width="85dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/lucro_textView"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        tools:ignore="NestedWeights" />

                    <EditText
                        android:id="@+id/lucro_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:ems="10" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/preco_textView"
                        android:layout_width="98dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/preco_textView"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                    <EditText
                        android:id="@+id/preco_editText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:ems="10" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/salvar_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/salvar_button" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>